# imagine-studio

./: .gitattributes  .gitignore  ALL_BUILD.vcxproj  BUG4_FIX.md  BUG4_FIX_INTENTO4.md  CMakeLists.txt  ImGui.vcxproj  Imagine Studio.sln  Imagine Studio.vcxproj  ImagineStudio.sln  ImagineStudio.vcxproj  README.md  ZERO_CHECK.vcxproj  adapter_test.vcxproj  alembic.ini  asset_database_test.vcxproj  autogen04202.db  build_fix.props  commit_imgui_h22.txt  commit_imgui_h23.txt  commit_msg_aaa_refactor.txt  commit_msg_backlog_reorg.txt  commit_msg_bug002_intento5.txt  commit_msg_bug002_intento6.txt  commit_msg_bug002_resuelto.txt  commit_msg_close_v130.txt  commit_msg_close_v140.txt  commit_msg_close_verification.txt  commit_msg_h11_h12_entity.txt  commit_msg_h13_entity_manager.txt  commit_msg_h14_entity_tests.txt  commit_msg_h21_transform.txt  commit_msg_h22_transform_tests.txt  commit_msg_h23_parent_hierarchy.txt  commit_msg_h24_hierarchy_tests.txt  commit_msg_h31_scene.txt  commit_msg_h32_h33_h34_scene_tests.txt  commit_msg_h41_h42_editor_integration.txt  commit_msg_h41_hierarchy.txt  commit_msg_h42_inspector.txt  (+27 more)
.github/: autogen-context.md  copilot-instructions.md
.github/workflows/: ci.yml
alembic/versions/: 929ee50df9bd_initial_schema.py
assets/: README.md
assets/scenes/: saved_scene.json  test_load.json  test_save.json
assets/shaders/: pbr_ps.hlsl  pbr_vs.hlsl
autogen/: MCP_STATUS.md  README.md  SETUP.md  SPRINT_STATUS.md  TERMINATION_FIX.md  WORKFLOW_COMPLETE.md  coder_agent.json  log-autogen-session.ps1  planner_agent.json  reviewer_agent.json  tester_agent.json
autogen/agents/: coder_agent_fixed.json  planner_agent_fixed.json  reviewer_agent_fixed.json  tester_agent_fixed.json
autogen/prompts/: _template.md
autogen/teams/: devteam_workflow.json  team_complete.json  team_selector_example.json  team_simple.json
docs/: AAA_STANDARDS.md  CLOSE_SPRINT.md  CLOSE_SPRINT_REFERENCE.md  IMGUI_INSTALL.md  MAIN.md  TEMPLATE.md  TEMPLATE_SECCION_NUEVA.md  THIRD_PARTY.md  backlog.md  commits.md  daily.md  roadmap.md  roadmap_detail.md  roadmap_detail_v1.0.0.md  roadmap_histories.md  roadmap_histories_v1.0.0.md  roadmap_log.md  roadmap_tasks.md  roadmap_tasks_v1.0.0.md  roadmap_v1.0.0.md  sprint.md  sprint_benchmarking_v1.7.0.md  sprint_bug_attempts.md  sprint_bugs.md  sprint_bugs_v1.1.0.md  sprint_commits.md  sprint_deviations.md  sprint_fix.md  sprint_histories.md  sprint_histories_v1.0.0.md  sprint_histories_v1.1.0.md  sprint_ia_sessions.md  sprint_tasks.md  sprint_tasks_v1.0.0.md  sprint_tasks_v1.2.0.md  sprint_v1.0.0.md  sprint_v1.1.0.md  sprint_v1.2.0.md
docs/methodology/: BUGS.md  CORE.md  DEVIATIONS.md  SESSIONS.md  WORKFLOW.md
docs/sessions/: 2025-01-18_AutoGen_MCP_Setup_Complete.md
docs/sprints/: README.md  sprint_bug_attempts_v1.3.0.md  sprint_bugs_v1.3.0.md  sprint_bugs_v1.5.0.md  sprint_bugs_v1.6.0.md  sprint_commits_v1.0.0-1.4.0.md  sprint_deviations_v1.3.0.md  sprint_deviations_v1.6.0.md  sprint_deviations_v1.7.0.md  sprint_fix_v1.3.0.md  sprint_fix_v1.5.0.md  sprint_histories_v1.0.0.md  sprint_histories_v1.3.0.md  sprint_histories_v1.4.0.md  sprint_histories_v2.0.0.md  sprint_ia_sessions_v1.3.0.md  sprint_ia_sessions_v1.4.0.md  sprint_ia_sessions_v2.0.0.md  sprint_tasks_v1.1.0.md  sprint_tasks_v1.3.0.md  sprint_tasks_v1.4.0.md  sprint_tasks_v1.6.0.md  sprint_tasks_v1.7.0.md  sprint_v1.6.0.md  sprint_v1.7.0.md
docs/templates/: AUTOGEN_COMPLETE_PACKAGE.md  AUTOGEN_DEPLOYMENT_CHECKLIST.md  AUTOGEN_EXECUTIVE_SUMMARY.md  AUTOGEN_QUICK_START.md  AUTOGEN_TEMPLATE_COPILOT_CONTEXT.md  AUTOGEN_TEMPLATE_INDEX.md  AUTOGEN_TEMPLATE_README.md  AUTOGEN_TEMPLATE_SETUP.md  COPILOT_DEPLOYMENT_GUIDE.md  COPILOT_PROMPTS_AUTOGEN.md  CORE.template.md  README.md  copilot-instructions.template.md  init-autogen-project.ps1
examples/scene1/: README.md  scene.json
mcp-server/: QUICKSTART.md  README.md  package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.ts  index_simple.ts
scripts/: check-encoding.ps1  close-sprint.ps1  deploy-autogen-template.ps1  install-imgui.ps1  validate-no-tests-in-main.ps1
shaders/: quad.hlsl
src/: main.cpp
src/assets/: AssetDatabase.cpp  AssetDatabase.h  AssetManager.cpp  AssetManager.h  MeshData.h  MeshImporter.cpp  MeshImporter.h  README_MESH_FORMAT.md  TextureImporter.cpp  TextureImporter.h  VFS.cpp  VFS.h
src/components/: MeshRenderer.cpp  MeshRenderer.h
src/core/: Assert.h  Log.h  Types.h
src/editor/: AssetBrowser.cpp  AssetBrowser.h  EditorUI.cpp  EditorUI.h  MaterialEditor.cpp  MaterialEditor.h  Viewport.cpp  Viewport.h
src/examples/: ExampleRunner.cpp
src/jobs/: TaskGraph.cpp  TaskGraph.h  ThreadPool.cpp  ThreadPool.h
src/materials/: Material.cpp  Material.h  MaterialInstance.cpp  MaterialInstance.h  MaterialManager.cpp  MaterialManager.h
src/platform/: Input.cpp  Input.h  InputManager.cpp  InputManager.h  Window.cpp  Window.h
src/renderer/: AdapterFactory.cpp  AdapterFactory.h  Camera.cpp  Camera.h  CommandAllocator.h  CommandBuffer.cpp  CommandBuffer.h  DX12CommandContext.cpp  DX12CommandContext.h  DX12Device.cpp  DX12Device.h  DX12OpaquePass.cpp  DX12OpaquePass.h  DX12PipelineManager.cpp  DX12PipelineManager.h  DX12RenderPass.cpp  DX12RenderPass.h  DX12Renderer.cpp  DX12Renderer.cpp.backup  DX12Renderer.h  DX12ResourceManager.cpp  DX12ResourceManager.h  DX12SwapChain.cpp  DX12SwapChain.h  DX12UIPass.cpp  DX12UIPass.h  Fence.cpp  Fence.h  IRenderer.h  Material.cpp  Material.h  MaterialConstants.h  RenderTarget.cpp  RenderTarget.h
src/scene/: Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  Transform.cpp  Transform.h
src/tests/: adapter_test.cpp  material_test.cpp  taskgraph_test.cpp  threadpool_bench.cpp
src/tools/: Profiler.cpp  Profiler.h
src/ui/: DirectWriteTextRenderer.cpp  IUI.h  SimpleUI.cpp  (+5 more)
tests/: asset_database_test.cpp  entity_test.cpp  mesh_importer_test.cpp  scene_serializer_test.cpp  scene_test.cpp  texture_importer_test.cpp  transform_test.cpp
tools/: reorder_includes.py  reorder_log.txt
(+8 files in other folders)
